--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="1920" d:DesignHeight="1080"
         x:Class="WarrantGenerator.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/logo.ico" 
+        Icon="/Assets/logo.ico"
         Title="WarrantGenerator">
 	<!-- Update the Icon! -->
 
@@ -132,6 +132,49 @@
 								 TextWrapping="Wrap"
 								 Height="60" />
 					</Border>
+				</StackPanel>
+
+				<StackPanel>
+					<StackPanel Orientation="Horizontal"
+								Spacing="2"
+								Margin="0, 0, 0, 2">
+						<Button Content="+"
+								Padding="5, 0, 5, 0"
+								FontSize="24"
+								Foreground="Green" />
+						<Button Content="-"
+								Padding="7, 0, 7, 0"
+								FontSize="24"
+								Foreground="Red" />
+						<TextBlock Text="Crimes Associated with this Warrant"
+								   VerticalAlignment="Center"
+								   Margin="5, 0, 0, 0"/>
+					</StackPanel>
+					<ListBox ItemsSource="{Binding Crimes}"
+							 BorderThickness="1"
+							 CornerRadius="2"
+							 Padding="4"
+							 Height="82">
+						<ListBox.Styles>
+							<Style Selector="ListBoxItem">
+								<Setter Property="Padding" Value="1" />
+							</Style>
+						</ListBox.Styles>
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<Border BorderBrush="Black"
+										BorderThickness="1"
+										CornerRadius="4">
+									<StackPanel Orientation="Horizontal"
+												Margin="2, 2, 2, 2">
+										<TextBlock Text="{Binding Code}" />
+										<TextBlock Text=" - " />
+										<TextBlock Text="{Binding Description}" />
+									</StackPanel>
+								</Border>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
 				</StackPanel>
 
 				<StackPanel>
