--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -7,8 +7,8 @@
         x:Class="WarrantGenerator.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/logo.ico"
-        Title="WarrantGenerator">
-	<!-- Update the Icon! -->
+        Title="WarrantGenerator"
+		Width="1920" Height="1080">
 
 	<Design.DataContext>
 		<!-- This only sets the DataContext for the previewer in an IDE,
@@ -39,7 +39,8 @@
 		<ScrollViewer>
 			<StackPanel HorizontalAlignment="Left"
 						Margin="10"
-						Spacing="10">
+						Spacing="10"
+						Width="1200">
 
 				<TextBlock FontSize="25"
 						   FontWeight="Bold"
@@ -134,48 +135,60 @@
 					</Border>
 				</StackPanel>
 
-				<StackPanel>
-					<StackPanel Orientation="Horizontal"
-								Spacing="2"
-								Margin="0, 0, 0, 2">
-						<Button Content="+"
-								Padding="5, 0, 5, 0"
-								FontSize="24"
-								Foreground="Green" />
-						<Button Content="-"
-								Padding="7, 0, 7, 0"
-								FontSize="24"
-								Foreground="Red" />
-						<TextBlock Text="Crimes Associated with this Warrant"
-								   VerticalAlignment="Center"
-								   Margin="5, 0, 0, 0"/>
+				<Border BorderBrush="{Binding CrimesBorder}"
+						BorderThickness="2">
+					<StackPanel>
+						<StackPanel Orientation="Horizontal"
+									Spacing="2"
+									Margin="0, 0, 0, 2">
+							<Button Content="+"
+									Padding="5, 0, 5, 0"
+									FontSize="24"
+									Foreground="Green"
+									Command="{Binding SpawnAddCrimeDialogCommand}" />
+							<Button Content="-"
+									Padding="7, 0, 7, 0"
+									FontSize="24"
+									Foreground="Red"
+									Command="{Binding RemoveCrimeCommand}"/>
+							<TextBlock Text="Crimes Associated with this Warrant"
+									   VerticalAlignment="Center"
+									   Margin="5, 0, 0, 0"/>
+						</StackPanel>
+						<ListBox ItemsSource="{Binding Crimes}"
+								 SelectedItem="{Binding SelectedItem}"
+								 BorderThickness="1"
+								 CornerRadius="2"
+								 Padding="4"
+								 Height="82">
+							<ListBox.Styles>
+								<Style Selector="ListBoxItem">
+									<Setter Property="Padding" Value="1" />
+								</Style>
+							</ListBox.Styles>
+							<ListBox.ContextMenu>
+								<ContextMenu>
+									<MenuItem Header="Remove Selected Crime"
+											  Command="{Binding RemoveCrimeCommand}"/>
+								</ContextMenu>
+							</ListBox.ContextMenu>
+							<ListBox.ItemTemplate>
+								<DataTemplate>
+									<Border BorderBrush="Black"
+											BorderThickness="1"
+											CornerRadius="4">
+										<StackPanel Orientation="Horizontal"
+													Margin="2, 2, 2, 2">
+											<TextBlock Text="{Binding Code}" />
+											<TextBlock Text=" - " />
+											<TextBlock Text="{Binding Description}" />
+										</StackPanel>
+									</Border>
+								</DataTemplate>
+							</ListBox.ItemTemplate>
+						</ListBox>
 					</StackPanel>
-					<ListBox ItemsSource="{Binding Crimes}"
-							 BorderThickness="1"
-							 CornerRadius="2"
-							 Padding="4"
-							 Height="82">
-						<ListBox.Styles>
-							<Style Selector="ListBoxItem">
-								<Setter Property="Padding" Value="1" />
-							</Style>
-						</ListBox.Styles>
-						<ListBox.ItemTemplate>
-							<DataTemplate>
-								<Border BorderBrush="Black"
-										BorderThickness="1"
-										CornerRadius="4">
-									<StackPanel Orientation="Horizontal"
-												Margin="2, 2, 2, 2">
-										<TextBlock Text="{Binding Code}" />
-										<TextBlock Text=" - " />
-										<TextBlock Text="{Binding Description}" />
-									</StackPanel>
-								</Border>
-							</DataTemplate>
-						</ListBox.ItemTemplate>
-					</ListBox>
-				</StackPanel>
+				</Border>
 
 				<StackPanel>
 					<TextBlock Text="Reason for Search Warrant" />
@@ -219,4 +232,5 @@
 	</DockPanel>
 
 </Window>
+
 
