Center MCA description, add Chapters 5 & 6.

--- a/Views/CrimeSelectionWindow.axaml
+++ b/Views/CrimeSelectionWindow.axaml
@@ -32,7 +32,8 @@
 								<CheckBox IsChecked="{Binding IsChecked}"
 										Content="{Binding Code}" />
 								<TextBlock Text=" " />
-								<TextBlock Text="{Binding Description}" />
+								<TextBlock Text="{Binding Description}"
+										   VerticalAlignment="Center" />
 							</StackPanel>
 						</StackPanel>
 					</ContentControl.Content>
